[vr] Use alternate colors for environments with gradients

This CL uses base::Versions built-in comparison logic rather than
my incorrect, hand-rolled code. It also swaps out the color scheme
when the component has a gradient.

Also reduces the number of stars used with these environments.

Bug: 806452,806471
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I250692105e680e1f3d0fee372f6886f35f2ced95
Reviewed-on: https://chromium-review.googlesource.com/889842
Commit-Queue: Ian Vollick <vollick@chromium.org>
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532240}
Former-commit-id: a04e5845a535c8e31c3182ed19e8065816b7e2c9